# vgcbot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: code-reviewer.md
.claude/commands/: code-review.md
data/: abilities.json  items.json  moves.json
research/: vgc-bench-summary.md
teams/reg_g/: G1.txt
teams/reg_j/: J12.txt
vgc_bench/: train.py
vgc_bench/src/: callback.py  env.py  policy.py  policy_player.py  teams.py  utils.py
